hphp/hack/test/typecheck/strict_switch/double_null.php.exp
File "double_null.php", line 9, characters 10-13:
Redundant `case` statement (Typing[4021])
  File "double_null.php", line 7, characters 10-13:
  `null` already handled here
